Fixes and Enhancements since Version 0.5 alpha 1

 Changed, Enhanced, or Newly Deprecated Features

 - Added the UML 1.4 metamodel, and thus the ability to load UML 1.4
   models encoded in XMI 1.1.

 - Added support in the mof2py code generator for "unprefixing" enumerated
   values, so that UML and other metamodels' enumerations work correctly
   when loading from XMI.

 - 'binding.Acquire()' now accepts a 'default' value argument, and
   'binding.New()' no longer accepts the 'bindToOwner' flag.

 - There is a new 'binding.IComponentKey' interface that is used to implement
   'IComponent.lookupComponent()'.  Now you can implement this interface,
   or create an adapter for it, in order to make an object usable as an
   argument to 'binding.lookupComponent()' - and therefore usable as a key
   for 'binding.bindTo()' or 'binding.bindToSequence()'.  Not that it's
   necessarily very useful to do so; you're probably better off simply
   creating a naming scheme.  But it might be useful for lookups done
   in the context of classes, since naming schemes aren't usable there.
   (It was actually added in order to factor out all the type testing that
   'lookupComponent' used to do, so it doesn't matter if it's useful for
   much else.)

 - PEAK has been refactored to avoid the use of 'isImplementedBy()' and
   similar introspection, in favor of 'adapt()'.  As a result, some
   'peak.naming' interfaces have changed.  This should not affect you
   if you are only subclassing PEAK-provided naming components and not
   implementing these interfaces "from scratch".  However, the various
   'isAddress', 'isAddressClass', 'isResolver', and 'isName' APIs have
   also been removed, as they were based on 'isImplementedBy()'.

 - REMOVED ability to use '__implements__' and '__class_implements__' to
   declare support for interfaces.  Use 'protocols.advise()' or a related
   API to do this now.  The 'protocols' package is available automatically
   from 'peak.api'.
