@@ -50,7 +50,6 @@ objectFactories = list(findUtilities(targetObj, naming.IObjectFactory))
 stateFactories  = list(findUtilities(targetObj, naming.IStateFactory))
 
 [peak.naming.schemes]
-
 # This section defines naming context factories or URL.Base subclasses to
 # be used for various URL schemes.  The entry name is the URL scheme, and
 # the value is either the object or an import string for loading it.
@@ -68,17 +67,18 @@ gadfly  = "peak.storage.SQL:GadflyURL"
 logfile = "peak.running.logs:logfileURL"
 logging.logger = "peak.running.logs:loggerURL"
 
-lockfile    = "peak.running.lockfiles:lockfileURL"
-nulllockfile= "peak.running.lockfiles:lockfileURL"
-shlockfile  = "peak.running.lockfiles:lockfileURL"
-flockfile   = "peak.running.lockfiles:lockfileURL"
-winflockfile= "peak.running.lockfiles:lockfileURL"
-win32.dde   = "peak.storage.DDE:ddeURL"
+lockfile     = "peak.running.lockfiles:lockfileURL"
+nulllockfile = "peak.running.lockfiles:lockfileURL"
+shlockfile   = "peak.running.lockfiles:lockfileURL"
+flockfile    = "peak.running.lockfiles:lockfileURL"
+winflockfile = "peak.running.lockfiles:lockfileURL"
+win32.dde    = "peak.storage.DDE:ddeURL"
 
-http   = "peak.naming.factories.openable:OpenableURL"
-ftp    = "peak.naming.factories.openable:OpenableURL"
-https  = "peak.naming.factories.openable:OpenableURL"
-file   = "peak.naming.factories.openable:FileURL"
+http    = "peak.naming.factories.openable:OpenableURL"
+ftp     = "peak.naming.factories.openable:OpenableURL"
+https   = "peak.naming.factories.openable:OpenableURL"
+file    = "peak.naming.factories.openable:FileURL"
+pkgfile = "peak.naming.factories.openable:PkgFileURL"
 
 [peak.metamodels.mof1.3.writers]
 
